workloads/foo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-service
  namespace: demo-services
  labels:
    app: foo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo-service
  template:
    metadata:
      labels:
        app: foo-service
    spec:
      serviceAccountName: foo-service-sa
      containers:
        - name: foo-service
          image: isurursiri/foo-service:1
          ports:
            - containerPort: 8090
