workloads/foo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  namespace: demo-services
spec:
  selector:
    app: foo-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
